# EGMStoolkit

./: .buildinfo  .gitignore  EGMStoolkit.py  README.md  README.rst  changelog.html  contrib.html  genindex.html  index.html  knownprob.html  objects.inv  readme.html  requirements.txt  requirementsdocs.txt  search.html  setup.cfg  setup.py
.github/workflows/: documentation.yml
_sources/: changelog.rst.txt  knownprob.rst.txt
_sources/advexample/: index.rst.txt
advexample/: adexample1.html
api/: EGMStoolkit.3rdparty.html  EGMStoolkit.EGMStoolkitapp.OptionParser.html  EGMStoolkit.EGMStoolkitapp.html  EGMStoolkit.classes.EGMSS1ROIapi.S1ROIparameter.html  EGMStoolkit.classes.EGMSS1ROIapi.html  EGMStoolkit.classes.EGMSS1burstIDapi.S1burstIDmap.html  EGMStoolkit.classes.EGMSS1burstIDapi.html  EGMStoolkit.classes.EGMSdownloaderapi.egmsdownloader.html  EGMStoolkit.classes.EGMSdownloaderapi.html  EGMStoolkit.classes.html  EGMStoolkit.constants.html  EGMStoolkit.functions.egmsapitools.html  EGMStoolkit.functions.egmsdatatools.html  EGMStoolkit.functions.esa2egmsburstID.html  EGMStoolkit.functions.html  EGMStoolkit.html  EGMStoolkit.usermessage.html  all-documents.html  classIndex.html  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  objects.inv  searchindex.json  undoccedSummary.html
api.sphinx_files/: index.html
classes/: EGMSS1ROIapi.py
contrib/matlab/: EGMStoolkit.m  EGMStoolkitimport.m
docs/: Makefile
docs/src/: changelog.rst  conf.py  contrib.rst  index.rst  (+1 more)
example/: example.html  example.ipynb
private/: qrcodegeneration.py
(+13 files in other folders)
