[metadata]
name = EGMStoolkit
version = 0.2.13
author = Alexis Hrysiewicz
author_email = alexis.hrysiewicz@ucd.ie
description = EGMS toolkit.
long_description_content_type = text/x-rst
license = GNU
url = https://github.com/alexisInSAR/EGMStoolkit.git
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8

[project.entry-points."jupyter_client.kernel_provisioners"]
local-provisioner = "jupyter_client.provisioning:LocalProvisioner"

[options.entry_points]
console_scripts =
EGMStoolkit = EGMStoolkit.EGMStoolkitapp:main